fix: add width value to scrollbar to allow scrolling on navigation

--- a/app/globals.css
+++ b/app/globals.css
@@ -126,5 +126,6 @@
 }
 
 ::-webkit-scrollbar {
-    width: 0;
+    background-color: transparent;
+    width: 1px;
 }
